<resources>
    <string name="app_name">AndroidChatAppJava</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_failed">Login Failed</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_correct_email">Enter Correct Email</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="sign_up_failed">Sign up failed : %1$s</string>
    <string name="do_not_have_account">Don\'t have account?</string>
    <string name="fail_to_update_profile">Fail to update profile : %1$s</string>
    <string name="access_permission_is_required">Access permission is required</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="photo_removed_successfully">Photo removed successfully</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="reset_password_instructions">Reset Password instructions has been sent on email :  %1$s</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="email_sent_failed">Failed to send email : %1$s</string>
    <string name="resend_timer">Resend in : %1$S</string>
    <string name="please_wait">Please wait...</string>
    <string name="no_internet">Check Internet Connection</string>
    <string name="chat">Chat</string>
    <string name="requests">Requests</string>
    <string name="find">Find</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_chat_list">Chat list will appear here</string>
    <string name="empty_friend_list">Friend list will appear here</string>
    <string name="empty_request_list">Request list will appear here</string>
    <string name="press_back_to_exit">Press back again to exit</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="failed_to_fetch_friends">Failed to fetch friends : %1$s</string>
    <string name="request_sent_successfully">Request sent successfully</string>
    <string name="failed_to_send_friend_request">Failed to send friend request : %1$s</string>
    <string name="request_cancel_successfully">Request cancel successfully</string>
    <string name="failed_to_cancel_friend_request">Failed to cancel friend request : %1$s</string>
    <string name="failed_to_deny_request">Failed to deny request : %1$s</string>
    <string name="failed_to_accept_request">Failed to accept request : %1$s</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="failed_to_fetch_chat_list">Failed to fetch chat list : %1$s</string>
    <string name="enter_message">Enter message</string>
    <string name="failed_to_send_message">Failed to send message : %1$s</string>
    <string name="message_sent_successfully">Message sent successfully</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="permission_required_to_access_files">Permission required to access files</string>
    <string name="upload_progress">Uploading %1$s (%2$s %%)</string>
    <string name="failed_to_upload">Failed to upload : %1$s</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="message_deleted_successfully">Message deleted successfully</string>
    <string name="failed_to_delete_file">Failed to delete file %1$s</string>
    <string name="failed_to_delete_message">Failed to delete message : %1$s</string>
    <string name="download_progress">Downloading %1$s (%2$s %%)</string>
    <string name="share_with">Share with...</string>
    <string name="file_downloaded_successfully">File Downloaded Successfully</string>
    <string name="view">View</string>
    <string name="failed_to_download">Failed to download file : %1$s</string>
    <string name="failed_to_store_file">Failed to store file</string>
    <string name="failed_to_fetch_friend_list">Failed to fetch friends list : %1$s</string>
</resources>